Update HealthCheck response data to a struct containing a message
